[project]
name = "tile2net"
version = "0.4.0"
description = "Pedestrian networks from aerial imagery tiles"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
keywords = [
    "urban-analytics",
    "pedestrian-network",
    "create-annotation",
    "sidewalk-detection"
]
authors = [
    { name = "Maryam Hosseini", email = "maryamh@berkeley.edu" },
]
maintainers = [
    { name = "Daniel Hodczak", email = "dhodcz2@uic.edu" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/VIDA-NYU/tile2net"
documentation = "https://tile2net.readthedocs.io/en/latest/?badge=latest"
issue-tracker = "https://github.com/VIDA-NYU/tile2net/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 42",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tile2net*"]

[tool.setuptools.package-data]
"tile2net.artifacts.sample.brk_sw_lines" = ["*"]
"tile2net" = ["logging.conf"]
# include .npy for testing; this is 9 MB!
"tile2net.raster.resources.segmentation" = ["**/*.npy"]


[tool.pytest.ini_options]
testpaths = [ "src/tile2net/tests" ]
python_files = ["test_local.py"]

